--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -33,14 +33,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#export\n",
+    "def say_hello(to):\n",
+    "    \"say hello to someone\"\n",
+    "    return f'Hello {to}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "say_hello('teddy')\n",
+    "from IPython.display import display,SVG\n",
+    "display(SVG('<svg height=\"100\"><circle cx=\"50\" cy=\"50\" r=\"40\"></svg>'))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
